# Winnipeg-real-estate-open-data

./: .gitignore  README.md  pyproject.toml  setup.py
doc/tutorial/: Step-1-data_configuration.ipynb  UM_Statistics.ipynb  Untitled.ipynb  WPG-REOD_data_configuration.ipynb  data_analysis.ipynb  keplergl_config.npy  keplergl_config_min.npy  keplergl_original_config.npy  map keplergl demo min.ipynb  map keplergl demo.ipynb
src/wpgdata/: analysis.py  app-map.py  app.py  base.py  data.py  utils.py
